# YTC

./: .gitattributes  .gitignore  README.md  build_exe.bat  build_exe.ps1  launcher.py  pyproject.toml  requirements.txt  run.py  start.bat  start.ps1  start.sh
.clawhub/: lock.json
backend/: auth.py  auto_like_scheduler.py  config.py  deps.py  main.py  models.py  schedule.py  tasks.py
backend/data/: account_alerts.py  accounts.py  app_config.py  auto_like_tasks.py  bili_cookie.py  channels.py  filter_patterns.py  user_data.py
backend/services/: add_account.py  auto_like.py  bili_api_download.py  bili_wbi.py  cli_env.py  curl_utils.py  douyin_collection.py  download.py  download_deadline.py  download_manager.py  download_worker.py  join_channel.py  parse_douyin_links.py  proxy_bypass.py  publish.py  search_bili.py  search_douyin.py  search_service.py  video_filter.py  video_order.py
backend/tools/: douyin_abogus.js  douyin_nocookie.py
config/: config.template.json
memory/: ORIGINAL_TOOLKIT.md  PROJECT.md
packaging/: channel-poster.spec
scripts/: test_account_dom.py  test_account_selection.mjs  test_account_selection.py  test_bili_download.py  test_bili_search.py
skills/douyin-search-keyword/: SKILL.md  _meta.json  package.json  skill-card.md
skills/tencent-channel-cli/: package-lock.json  package.json
skills/tencent-channel-community/: _meta.json  skill-card.md
skills/tencent-channel-community/.clawhub/: origin.json
static/: app.js  cron-picker.css  cron-picker.js  index.html  style.css
tests/: test_download_integration.py  test_download_unit.py
(+13 files in other folders)
